syntax = "proto3";
package pb;

enum ConfigType {
    CONFIG_OK      = 0; //正常
	CONFIG_BOX     = 1; //宝箱
	CONFIG_ENV     = 2; //变量
	CONFIG_LOTTERY = 3; //全民刮奖
	CONFIG_NOTICE  = 4; //公告
	CONFIG_PRIZE   = 5; //抽奖
	CONFIG_SHOP    = 6; //商城
	CONFIG_VIP     = 7; //VIP
	CONFIG_CLASSIC = 8; //经典
}

// 同步数据
message SyncConfig
{
    ConfigType Type = 1 ;//类型
    string Data = 2 ;//数据
}

// 主动获取数据
message GetConfig
{
    ConfigType Type = 1 ;//类型
}

//内部消息
message Internal {
    uint32 Code = 1; //消息编号
    string Userid = 2; //路由方式
    bytes Data = 3; //消息内容
}

enum WebCode {
    ReqMsg   = 0; //正常
    Online   = 1; //在线状态
    Notice   = 2; //公告
    Build    = 3; //绑定
    Give     = 4; //赠送钻石
    SetHands = 5; //设置牌
    GetHands = 6; //获取牌
    Shop     = 7; //商贸城
    SetEnv   = 8; //设置变量
    GetEnv   = 9; //获取变量
    DelEnv   =10; //删除变量
    Prize    =11; //发布抽奖
    Box      =12; //发布宝箱
    Room     =13; //房间数据
    Classic  =14; //经典
    Vip      =15; //Vip
    Dan      =16; //段
    Task     =17; //任务
    Betting  =18; //疯狂投注
    Lottery  =19; //全民刮奖
    Change   =20; //货币变更
}

//web请求
message WebRequest
{
	WebCode Code = 1; //协议号
	bytes Data = 2; //数据
}

message WebResponse
{
	WebCode Code = 1; //协议号
	int32 ErrCode = 2; //错误码
	string ErrMsg = 3; //错误信息
	string Result = 4; //正常时返回信息
}
